# LeitnerLearner

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LeitnerLearner.desktop  LeitnerLearner.pro  README.md
qml/: LeitnerLearner.qml
qml/pages/: ModeChooser.qml  VerseCheck.qml  VerseEntry.qml
rpm/: LeitnerLearner.changes.in  LeitnerLearner.changes.run.in  LeitnerLearner.yaml
src/: abstractcheckwdgt.cpp  abstractcheckwdgt.h  abstractdatachecker.cpp  abstractdatachecker.h  abstractdatachecker.ui  abstractdataentry.cpp  abstractdataentry.h  abstractdataentry.ui  abstractdatatype.cpp  abstractdatatype.h  abstractentrywdgt.cpp  abstractentrywdgt.h  abstractstoragebackend.cpp  abstractstoragebackend.h  appbackend.cpp  appbackend.h  backend.cpp  backend.h  bookenum.h  booktitles.h  configurationhandler.cpp  configurationhandler.h  constants.h  filestoragebackend.cpp  filestoragebackend.h  global_definitions.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  singleton.cpp  singleton.h  sqlitestoragebackend.cpp  sqlitestoragebackend.h  storagecache.cpp  storagecache.h  verse.cpp  verse.h  versechecker.cpp  versechecker.h  (+3 more)
src/modules/: helpers.cpp  helpers.h
src/modules/bibleVerse/: booktitles.h  verse.cpp  verse.h  versechecker.cpp  versechecker.h  versechecker.ui  versecheckwdgt.cpp  versecheckwdgt.h  versecheckwdgt.ui  verseentry.cpp  verseentry.h  verseentrywdgt.cpp  verseentrywdgt.h  verseentrywdgt.ui
src/modules/songVerse/: songverse.cpp  songverse.h  songversechecker.cpp  songversechecker.h  songversecheckwdgt.cpp  songversecheckwdgt.h  songversecheckwdgt.ui  songverseentry.cpp  songverseentry.h  songverseentrywdgt.cpp  songverseentrywdgt.h  songverseentrywdgt.ui
tests/: CMakeLists.txt
tests/storagecache/: CMakeLists.txt  storagecachetest.cpp
translations/: LeitnerLearner-de.ts  LeitnerLearner.ts
